update property info on detail pages, fix css for social media icons on mobile screens - less padding-top

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -127,11 +127,14 @@ overflow-x: hidden !important;
   min-height: 600px;
 }
 .row {
+
   #big-icon {
       font-size: 60px;
       color: white
   }
 }
+
+
 #main-footer {
   height: auto
 }
@@ -160,7 +163,7 @@ overflow-x: hidden !important;
   min-height: 500px;
 }
 .row {
-  padding: 3px
+  padding: 3px;
 
   #big-icon {
       font-size: 55px;
